@@ -11,7 +11,9 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
         <lombok.version>1.18.20</lombok.version>
         <jbehave-support.version>1.3.2</jbehave-support.version>
         <splunk.version>1.6.5.0</splunk.version>
@@ -35,6 +37,30 @@
             </testResource>
         </testResources>
         <testSourceDirectory>src/test/java</testSourceDirectory>
+
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>${maven-failsafe-plugin.version}</version>
+            <configuration>
+                <includes>
+                    <include>**/*IT.java</include>
+                </includes>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>integration-test</id>
+                    <phase>integration-test</phase>
+                    <goals>
+                        <goal>integration-test</goal>
+                        <goal>verify</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        </plugins>
     </build>
 
     <dependencies>
